블로그 수정

--- a/_posts/2020-05-26-newbie.md
+++ b/_posts/2020-05-26-newbie.md
@@ -6,7 +6,7 @@ date: 2020-05-27 19:30:00 +09:00
 feature: '/img/posts/03/th-img.jpg'
 background: '/img/posts/03/header.jpg'
 categories:
-  - APP-REVIEW
+  - App-Review
 tags:
   - 대학생
   - 대학생활
