--- a/_posts/2020-05-27-tinder.md
+++ b/_posts/2020-05-27-tinder.md
@@ -6,7 +6,7 @@ date: 2020-05-27 19:30:00 +09:00
 feature: '/img/posts/04/main-img.jpg'
 background: '/img/posts/04/header-img.jpg'
 categories:
-  - APP-REVIEW
+  - App-Review
 tags:
   - 연애
   - 데이트
