카테고리 수정

--- a/_posts/2020-05-26-routine.md
+++ b/_posts/2020-05-26-routine.md
@@ -6,7 +6,7 @@ date: 2020-05-26 14:30:00 +09:00
 feature: '/img/posts/01/th-img.jpg'
 background: '/img/posts/01/header01.jpg'
 categories:
-  - App-Review
+  - appreview
 tags:
   - 태도
   - 습관
